fixed dark mode and had it save to local storage

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -6,14 +6,14 @@
     --primary-color: #24252A;
     --secondary-color: #edf0f1;
 }
-.transition-fade {
+/* .transition-fade {
     transition: 0.4s;
     opacity: 1;
   }
   
   html.is-animating .transition-fade {
     opacity: 0;
-  }
+  } */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
@@ -98,11 +98,12 @@ header {
     padding: 0px 20px;
 }
 
-.nav_links li a {
+.nav_links li a, #dark {
     transition: all 0.3s ease 0s;
+    cursor: pointer;
 }
 
-.nav_links li a:hover {
+.nav_links li a:hover, #dark:hover {
     color: #0088A9
 }
 #contact {
